# nn-churn-prediction-fiap

./: .coverage  .gitignore  Dockerfile  EXPLAIN.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: README.md
docs/: PRD_churn_project.md  architecture.md  model_card.md  model_comparison.md  monitoring.md  videoSTAR.md  video_script.md
notebooks/: 01_eda.ipynb
src/nn_churn_prediction_fiap/: config.py
src/nn_churn_prediction_fiap/api/: dependencies.py  main.py  middleware.py  schemas.py
src/nn_churn_prediction_fiap/cli/: train.py
src/nn_churn_prediction_fiap/data/: load.py  schema.py
src/nn_churn_prediction_fiap/features/: pipeline.py  transformers.py
src/nn_churn_prediction_fiap/inference/: predictor.py
src/nn_churn_prediction_fiap/models/: baseline.py  mlp.py
src/nn_churn_prediction_fiap/training/: cv.py  evaluate.py  torch_loop.py
src/nn_churn_prediction_fiap/utils/: logging.py  seed.py
tests/: conftest.py  test_api.py  test_schema.py  test_smoke.py
