[project]
name = "nn-churn-prediction-fiap"
version = "0.1.0"
description = "Churn prediction using neural networks"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mlflow>=2.10.0",
    "numpy>=2.4.4",
    "pandas>=2.1.0,<3.0.0",
    "pandera>=0.31.1",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
]
training = [
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nn_churn_prediction_fiap"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "T201", # ban print()
]

[tool.ruff.lint.isort]
known-first-party = ["nn_churn_prediction_fiap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
